--- a/api/package.json
+++ b/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,8 +18,5 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.5",
     "stripe": "^11.1.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.20"
   }
 }
